Add a game timer, bug fix, style for some elements

--- a/src/index.html
+++ b/src/index.html
@@ -50,8 +50,7 @@
 			<a href="https://github.com/Thatguyjs/Minesweeper" target="_blank" rel="noreferrer">View on Github</a>
 
 			<div id="timer">
-				<span id="timer:min"></span>
-				<span id="timer:sec"></span>
+				<span name="timer:minute"></span>:<span name="timer:second"></span>
 			</div>
 		</div>
 
