More styling, add a win / lose indicator

--- a/src/index.html
+++ b/src/index.html
@@ -47,10 +47,16 @@
 			<canvas id="canvas">Your browser doesn't support the HTML5 canvas!</canvas>
 		</div>
 		<div class="section" id="right-section">
-			<a href="https://github.com/Thatguyjs/Minesweeper" target="_blank" rel="noreferrer">View on Github</a>
+			<div id="github">
+				<a href="https://github.com/Thatguyjs/Minesweeper" target="_blank" rel="noreferrer">View on Github</a>
+			</div>
 
 			<div id="timer">
 				<span name="timer:minute"></span>:<span name="timer:second"></span>
+			</div>
+
+			<div id="game-result">
+				<span id="display:result" class="display"></span>
 			</div>
 		</div>
 
