--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta http-equiv="refresh" content="0;/Minesweeper/src">
+		<meta http-equiv="refresh" content="0;https://thatguyjs.github.io/Minesweeper/src/">
 	</head>
 </html>
